branches/V6.1/projeqtor/docs/technical/index.rst
.. ProjeQtOr user guide documentation master file, created by
   sphinx-quickstart on Fri May 29 11:17:53 2015.
   You can adapt this file completely to your liking, but it should at least
   contain the root `toctree` directive.


Bienvenue
=========

ProjeQtOr est un organisatieur de projets orienté qualité, sous la forme d'une applicatoin web.

ProjeQtOr est devenu très populaire grâce à sa complétude du périmètre de la gestion de projet 
et sans grande paramétrabilité.

.. image:: /images/GUI/projeqtor.png
   :align: right

Les fonctionnalités sont largement explicitées dans le Manuel Utilisateur en ligne.

Mais les caractéristiques techinques de ProjeQtOr ne sont pas incluses dans le Manuel Utilisateur.

C'est le sujet du présent document.


.. raw:: latex


Les nouveautés
==============

Ceci est la première version du document.

.. raw:: latex


Structure du code
=================
 
.. toctree::
   :maxdepth: 1
   
   Structure
   
Technique
=================

.. toctree::
   :maxdepth: 1
   
   Technical

Installation
=================
 
.. toctree::
   :maxdepth: 1
   
   Installation
   
Configuration
=================

.. toctree::
   :maxdepth: 1
   
   Configuration

Développement objet
===================

.. toctree::
   :maxdepth: 1
   
   Development
   
Internationalisation
====================
 
.. toctree::
   :maxdepth: 1
   
   Internationalization
   
Gestion des paramètres
======================
  
.. toctree::
   :maxdepth: 1
   
   ParametersManagement
   
Customisation
=============
   
.. toctree::
   :maxdepth: 1
   
   Customization

Habilitations
=============

.. toctree::
   :maxdepth: 1
   
   Habilitations
   
Utilisation de l'API
====================

.. toctree::
   :maxdepth: 1
   
   UseApi

Développement de plugins
========================

.. toctree::
   :maxdepth: 1
   
   Plugins

Procédure de déploiement
========================

.. toctree::
   :maxdepth: 1
   
   Deployment

Installer nouvelle version
==========================

.. toctree::
   :maxdepth: 1
   
   NewVersion

Import
==========================

.. toctree::
   :maxdepth: 1
   
   Import

Automatique Import
==========================
 
.. toctree::
   :maxdepth: 1
   
   ImportAutomatic

Paramètres Globaux
==========================
 
.. toctree::
   :maxdepth: 1
   
   GlobalParameters

Backup / Restore
==========================

.. toctree::
   :maxdepth: 1
   
   Backup   

Glossaire
=========

.. toctree::
   :maxdepth: 1
  
   Glossary


