branches/V6.2/projeqtor/docs/technical/index.rst
.. ProjeQtOr user guide documentation master file, created by
   sphinx-quickstart on Fri May 29 11:17:53 2015.
   You can adapt this file completely to your liking, but it should at least
   contain the root `toctree` directive.


Bienvenue
=========

ProjeQtOr est un organisateur de projets orienté qualité, sous la forme d'une application web.

ProjeQtOr est devenu très populaire grâce à sa complétude du périmètre de la gestion de projet 
et sa grande paramétrabilité.

.. image:: /images/GUI/projeqtor.png
   :align: right

Les fonctionnalités sont largement explicitées dans le Manuel Utilisateur en ligne.

Mais les caractéristiques techinques de ProjeQtOr ne sont pas incluses dans ce Manuel Utilisateur.

De même, les éléments de configuration techniques et les élément d'interfaçage y sont peu développé.

C'est le sujet du présent document.

Nous allons présenté dans ce document :

- La structure du code qui montre comment sont organisés les valeurs source de ProjeQtOr.

- La partie technique qui évoque la facilité d'installation et de paramétrage de ProjeQtOr.

- Une partie installation puis une partie configuration qui est indispensable pour réalisé une bonne installation et un bon paramétrage de l'application.

- Le développement Object et les régles de base de la programmation.

- L'internationnalisation de ProjeQtOr qui permet d'avoir l'application en plusieurs langages et de ne rien stocker en dur dans ProjeQtOr.

- La gestion des paramétres ...

- La customisation d'une classe ...

- Le moyen de créer un nouvel écran dans ProjeQtOr trés facilement .

- Les différentes fonctions pour créer vos propres icônes .

- La partie "Habilitation" qui va gérer l'affichage et les différents droits dans l'application.

- L'utilisation de l'API , les différentes méthodes qui peuvent être utilisé , les descriptions et des exemples.

- Le développement de plugins ,leurs déploiement et quelques conseils pour coder.

- Le déploiement et la migration vers une nouvelle version de ProjeQtOr.

- Une partie dédié à l'installation d'une nouvelle version qui montre comment mettre à jour sa version.

- Une partie qui décrit entiérement l'importation à partir de fichiers CSV ou XLSX et le moyen pour automatisé les importations.

- Les paramétres globaux et leurs utilités.

- Le moyen de sauvegarder ses données et le moment de sauvegarder ses données.


.. raw:: latex


Les nouveautés
==============

Ceci est la première version du document.

.. raw:: latex

Modéle Vue Controlleur(MVC)
===========================
 
.. toctree::
   :maxdepth: 1
   
   Mvc
   
Structure du code
=================
 
.. toctree::
   :maxdepth: 1
   
   Structure
   
Technique
=================

.. toctree::
   :maxdepth: 1
   
   Technical

Installation
=================
 
.. toctree::
   :maxdepth: 1
   
   Installation
   
Configuration
=================

.. toctree::
   :maxdepth: 1
   
   Configuration

Développement objet
===================

.. toctree::
   :maxdepth: 1
   
   Development
   
Internationalisation
====================
 
.. toctree::
   :maxdepth: 1
   
   Internationalization
   
Gestion des paramètres
======================
  
.. toctree::
   :maxdepth: 1
   
   ParametersManagement
   
Customisation
=============
   
.. toctree::
   :maxdepth: 1
   
   Customization

Créer nouveau écran
===================
   
.. toctree::
   :maxdepth: 1
   
  NewScreen
  
Modifier des icônes
============================
   
.. toctree::
   :maxdepth: 1
   
  CreateIcon
   
Habilitations
=============

.. toctree::
   :maxdepth: 1
   
   Habilitations
   
Utilisation de l'API
====================

.. toctree::
   :maxdepth: 1
   
   UseApi

Développement de plugins
========================

.. toctree::
   :maxdepth: 1
   
   Plugins

Procédure de déploiement
========================

.. toctree::
   :maxdepth: 1
   
   Deployment

Installer nouvelle version
==========================

.. toctree::
   :maxdepth: 1
   
   NewVersion

Import
==========================

.. toctree::
   :maxdepth: 1
   
   Import

Automatique Import
==========================
 
.. toctree::
   :maxdepth: 1
   
   ImportAutomatic

Paramètres Globaux
==========================
 
.. toctree::
   :maxdepth: 1
   
   GlobalParameters

Backup / Restore
==========================

.. toctree::
   :maxdepth: 1
   
   Backup   

Glossaire
=========

.. toctree::
   :maxdepth: 1
  
   Glossary


